[metadata]
name = from-scratch-logistic-regression
version=0.1.0
description = [PROJECT_DESCRIPTION]
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bjhammack/from-scratch-logistic-regression
author = Benjamin Hammack
auther_email = bjhammack@protonmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: [TOPIC1] :: [TOPIC2]
project_urls=
    Changelog = https://github.com/bjhammack/from-scratch-logistic-regression/blob/master/CHANGELOG.md
    Bug Tracker = https://github.com/bjhammack/from-scratch-logistic-regression/issues
keywords = 
	keyword1
	keyword2
	keyword3

[options]
packages =
    from_scratch_logistic_regression
package_dir =
    =src
python_requires = >=3.6
zip_safe = false
install_requires =
	file: requirements.txt

[options.extras_require]
testing =
	file: requirements_dev.txt

[options.package_data]
from_scratch_logistic_regression = py.typed

[flake8]
max-line-length = 80
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/
